# csad2526ki406bohdankarpa9

./: CMakeLists.txt  README.md  ci.bat  ci.sh  main.cpp  math_operations.h  responses with the AI assistant.txt
.github/workflows/: ci.yml
tests/: unit_tests.cpp
